--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -267,9 +267,9 @@ footer a {
 }
 
 .errorMessage {
-	color: rgb(241, 89, 89);
+	color: #CA0B00;
     /* font-family: Loew;
     font-style: thin;
     font-size: small; */
-    /* margin-left: 30px; */
+    margin-left: -10px;
 }
