--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -11,7 +11,8 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
+	/* font-family: 'Montserrat', sans-serif; */
+	font-family: 'Roboto','Montserrat', sans-serif;
 	height: 100vh; 
 	margin: -20px 0 50px;
 	/* margin: 0px */
